Fix overlap text content to gameboard

--- a/style.css
+++ b/style.css
@@ -1,42 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 body {
-  background: url('https://i.imgur.com/7LvmzEV.jpg') no-repeat center     center fixed;
+  background: url("https://i.imgur.com/7LvmzEV.jpg") no-repeat center center
+    fixed;
   background-size: cover;
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
+  display: flex;
+  flex-direction: column;
 }
-
-.board {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-gap: 5px;
-    width: 320px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);  
-    }
-
-.cell {
-      width: 100px;
-      height: 100px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      font-size: 35px;
-      cursor: pointer;
-      border: 2px solid #000;
-}
-
 h1 {
   text-align: center;
-  font-size: 80px;
+  font-size: 50px;
   color: #836953;
   justify-content: center;
   align-items: center;
+  order: 1;
 }
-
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  grid-gap: 5px;
+  width: 320px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  order: 2;
+}
+.cell {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 35px;
+  cursor: pointer;
+  border: 2px solid #000;
+}
 #reset-button {
   background-color: #69533f;
   border: none;
@@ -46,42 +46,22 @@ h1 {
   font-size: 13px;
   display: block;
   margin: 0 auto;
-  margin-top: 520px;
+  margin-top: 450px;
+  order: 4;
 }
-
 #message {
   text-align: center;
-  font-family: 'Indie Flower', cursive;
-  font-size: 35px;
+  font-family: "Indie Flower", cursive;
+  font-size: 20px;
   margin-bottom: 20px;
+  order: 3;
 }
-
 @media only screen and (max-width: 600px) {
-  h1 {
-    font-size: 55px;
-    text-align: center;
-  }
-
-  #reset-button {
-    margin-top: 500px;
-  }
-
-  #message {
-    margin-bottom: 20px;
-  }
+  /* ... */
 }
-
+@media only screen and (max-width: 480px) {
+  /* ... */
+}
 @media only screen and (max-width: 768px) {
-  h1 {
-    font-size: 55px;
-    text-align: center;
-  }
-  
-   #reset-button {
-    margin-top: 500x;
-  }
-
-  #message {
-    margin-bottom: 20px;
-  }
+  /* ... */
 }
